Add debug compile mode to fbi.

--- a/fbi/Makefile
+++ b/fbi/Makefile
@@ -1,5 +1,7 @@
 include panda.mak
 
+#DEBUG := true
+
 VPATH=.:$(PANDA_SRC_PATH)/panda/src:$(PANDA_BUILD_DIR)/i386-softmmu:../common
 
 CXX ?= clang++
@@ -10,10 +12,17 @@ PKGS=libodb libodb-pgsql jsoncpp
 LDFLAGS= -L/usr/local/lib -lprotobuf-c -lz -lpq -ljsoncpp -lodb-pgsql -lodb
 CFLAGS= -I$(PANDA_SRC_PATH)/panda/include \
 		-I$(PANDA_BUILD_DIR)/i386-softmmu \
-		-I../include -D PLOG_READER -O3 -g -fno-omit-frame-pointer \
-		-D LAVA -D PANDA_LAVA \
-		-I/usr/lib/odb/x86_64-linux-gnu/include -flto
+		-I/usr/lib/odb/x86_64-linux-gnu/include \
+		-I../include -D PLOG_READER
 CFLAGS+= $(shell pkg-config $(PKGS) --cflags)
+
+ifdef DEBUG
+	CFLAGS += -O0 -g -fno-omit-frame-pointer
+else
+	CFLAGS += -flto -O3
+	LDFLAGS += -flto -fuse-ld=gold
+endif
+
 CXXFLAGS=$(CFLAGS) -std=c++14
 
 all: fbi
@@ -40,7 +49,7 @@ find_bug_inj.o: lava-odb.hxx ../include/lava.hxx
 fbi_objs=$(addsuffix .o,$(basename $(fbi_sources)))
 
 fbi: $(fbi_objs)
-	$(CXX) -o $@ $^ $(LDFLAGS) -flto -fuse-ld=gold
+	$(CXX) -o $@ $^ $(LDFLAGS)
 
 clean:
 	rm -f $(fbi_objs) fbi
