zekun's first runnable

--- a/fbi/Makefile
+++ b/fbi/Makefile
@@ -7,14 +7,14 @@ CC ?= clang
 
 PKGS=libodb libodb-pgsql jsoncpp
 
-LDFLAGS= -L/usr/local/lib -lprotobuf-c -lz -lpq -ljsoncpp -lodb-pgsql -lodb
+LDFLAGS= -L/usr/local/lib -lprotobuf-c -lz -lpq -ljsoncpp -lodb-pgsql -lodb -L/usr/lib -ggdb
 CFLAGS= -I$(PANDA_SRC_PATH)/panda/include \
 		-I$(PANDA_BUILD_DIR)/i386-softmmu \
-		-I../include -D PLOG_READER -O3 -g -fno-omit-frame-pointer \
+		-I../include -D PLOG_READER -ggdb -fno-omit-frame-pointer \
 		-D LAVA -D PANDA_LAVA \
 		-I/usr/lib/odb/x86_64-linux-gnu/include -flto
 CFLAGS+= $(shell pkg-config $(PKGS) --cflags)
-CXXFLAGS=$(CFLAGS) -std=c++14
+CXXFLAGS=$(CFLAGS) -std=c++1y -ggdb 
 
 all: fbi
 
@@ -40,7 +40,7 @@ find_bug_inj.o: lava-odb.hxx ../include/lava.hxx
 fbi_objs=$(addsuffix .o,$(basename $(fbi_sources)))
 
 fbi: $(fbi_objs)
-	$(CXX) -o $@ $^ $(LDFLAGS) -flto -fuse-ld=gold
+	$(CXX) -o $@ $^ $(LDFLAGS) -fuse-ld=gold -flto 
 
 clean:
 	rm -f $(fbi_objs) fbi
