pip upgrade added to docker config

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM m4mbr3/lava32
+  FROM m4mbr3/lava32
 
 RUN echo deb http://httpredir.debian.org/debian wheezy-backports main >> /etc/apt/sources.list
 RUN apt-get update
@@ -48,5 +48,7 @@ RUN ./configure --enable-shared && make -j $(nproc) && make install
 RUN echo "/usr/local/lib" > /etc/ld.so.conf.d/usr-local-lib.conf
 RUN ldconfig
 
+RUN pip install --upgrade -v pip -i https://pypi.python.org/simple/
 RUN pip install subprocess32 lockfile sqlalchemy
+
 Run apt-get install -y sudo gdb gawk
