--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,5 +48,6 @@ RUN ./configure --enable-shared && make -j $(nproc) && make install
 RUN echo "/usr/local/lib" > /etc/ld.so.conf.d/usr-local-lib.conf
 RUN ldconfig
 
+RUN pip install --upgrade -v pip -i https://pypi.python.org/simple/
 RUN pip install subprocess32 lockfile sqlalchemy
 Run apt-get install -y sudo gdb gawk
