Add example json files with inputs, restructure lava directory to better organize targets

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,33 @@
 includes.h.gch
 *.o
 *.so
-/libexec
-btrace.log
 .*.swp
 ~*
 *.pyc
 /tags
-/include/lava-odb.*xx
+*/tags
+/libexec
+*.qcow2
+
 .gdb_history
+btrace.log
+
+/include/lava.sql
+/include/lava-odb.*xx
+
 /fbi/fbi
 /fbi/panda.mak
-/include/lava.sql
 /fbi/lava-odb.*xx
 /fbi/lava.sql
+
 /src_clang/build
 /src_clang/lava-odb.*xx
 /src_clang/lava.sql
+
 /lava.mak
+
+/target_bins/*
+!/target_bins/.gitkeep
+
+/target_injections/*
+!/target_injections/.gitkeep
