--- a/host.json.example
+++ b/host.json.example
@@ -1,4 +1,4 @@
-{   "___README___": "Copy this file to host.yaml and  update the paths for your system",
+{   "___README___": "Copy this file to host.json and  update the paths for your system",
 
     "qemu":       "/home/fasano/panda/build/i386-softmmu/qemu-system-i386",
     "qcow_dir":   "/home/fasano/lava/",
