Re-organization of the repo
1) lavaTool and FBI compilation are now using cmake
2) LavaTool, fbi and their libraries are now under tools folder and they
better respect their dependencies.
3) The docker container image has been updated to a more modern version
of debian i386.

To be done is the integration of the new kind of compilation within the
lava automated process (e.g. setup.py and everything.py) since the
location of the tools has changed along with compilation of llvm within
the container.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,11 @@
-  FROM m4mbr3/lava32
-
+FROM i386/debian
 RUN echo deb http://httpredir.debian.org/debian wheezy-backports main >> /etc/apt/sources.list
 RUN apt-get update
-RUN apt-get install -y build-essential python
-
+RUN apt-get install -y sudo build-essential python wget cmake gdb gawk mlocate \
+            vim libc++-dev  g++-multilib g++ ninja-build \
+            git jq bc python python-colorama zsh libjsoncpp-dev \
+            python-psycopg2 python-pexpect python-psutil \
+            python-numpy python-argparse python-pip python-dev libpq-dev
 ENV release 3.6.2
 ENV llvm_version llvm-${release}
 
@@ -25,12 +27,16 @@ RUN tar -xJf clang-tools-extra-$release.src.tar.xz
 RUN mv clang-tools-extra-$release.src extra
 
 WORKDIR /$llvm_version
-RUN ./configure --enable-optimized --disable-assertions --enable-targets=x86 --enable-shared --enable-pic --host=i486-linux-gnu --build=i486-linux-gnu
-RUN REQUIRES_RTTI=1 make -j $(nproc)
-
-RUN apt-get install -y git jq bc python python-colorama zsh libjsoncpp-dev \
-    python-psycopg2 python-pexpect python-psutil \
-    python-numpy python-argparse python-pip python-dev libpq-dev
+#RUN ./configure --enable-optimized --disable-assertions --enable-targets=x86 --enable-shared --enable-pic --host=i486-linux-gnu --build=i486-linux-gnu
+RUN mkdir /$llvm_version/build
+RUN mkdir /$llvm_version/install
+WORKDIR /$llvm_version/build
+RUN cmake ../ -DCMAKE_INSTALL_PREFIX=/$llvm_version/install -DLLVM_TARGETS_TO_BUILD=X86 \
+              -DBUILD_SHARED_LIBS=true -DLLVM_ENABLE_ASSERTIONS=false -DLLVM_ENABLE_RTTI=true \
+              -DLLVM_BUILD_32_BITS=true \
+              -DLLVM_ENABLE_PIC=true -DCMAKE_BUILD_TYPE=Release -DLLVM_TARGET_ARCH=i486-linux-gnu \
+              -G "Ninja"
+RUN ninja install
 
 WORKDIR /
 RUN wget http://codesynthesis.com/download/odb/2.4/odb_2.4.0-1_i386.deb
@@ -52,5 +58,10 @@ RUN pip install --upgrade -v pip -i https://pypi.python.org/simple/
 RUN pip install subprocess32 lockfile sqlalchemy -i https://pypi.python.org/simple
 
 RUN pip install pyyaml
+RUN ln -s /usr/lib/libjsoncpp.so.0 /usr/lib/libjsoncpp.so.1
+RUN updatedb
 
-Run apt-get install -y sudo gdb gawk
+ENV CC=/$llvm_version/install/bin/clang
+ENV CXX=/$llvm_version/install/bin/clang++
+ENV LLVM_DIR=/$llvm_version/install/share/llvm/cmake
+
