--- a/.gitignore
+++ b/.gitignore
@@ -15,21 +15,22 @@ host.json
 ~*
 .*.sw*
 
+tools/lavaODB/generated
+tools/install
+tools/build
 
-/fbi/fbi
-/fbi/lava-odb.*xx
-/fbi/lava.sql
-/fbi/panda.mak
-
-/include/lava-odb.*xx
-/include/lava-odb.*xx
-/include/lava.sql
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
 
 /scripts/getfns.pickle
 
-/src_clang/build
-/src_clang/lava-odb.*xx
-/src_clang/lava.sql
 
 /target_bins/*
 /target_injections/*
