--- a/tools/lavaODB/src/CMakeLists.txt
+++ b/tools/lavaODB/src/CMakeLists.txt
@@ -17,19 +17,20 @@ set(ODB_HXX ${CMAKE_CURRENT_SOURCE_DIR}/../include/lava.hxx)
 
 add_custom_command (
     OUTPUT ${ODB_GENERATED_FILES}
-    COMMAND odb ${ODB_OPTS} ${ODB_HXX} #-I${ODB_INCLUDE}
-    DEPENDS cleanup ${ODB_INCLUDE}
+    COMMAND odb ${ODB_OPTS} ${ODB_HXX}
+    DEPENDS cleanup
 )
 
 add_custom_target (cleanup
-    rm -rf ${GENERATED}/*
-    COMMENT "Cleaning up geneted folder"
+    rm -rf ${GENERATED}/* #&& sleep 2
+    COMMENT "Cleaning up tools/lavaODB/generated folder"
 )
 
 add_library(lava-odb_x32 STATIC ${GENERATED}/lava-odb.cxx)
 set_property(TARGET lava-odb_x32 PROPERTY CXX_STANDARD 11)
 set_target_properties(lava-odb_x32 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 target_link_libraries(lava-odb_x32 odb odb-pgsql)
+add_dependencies(lava-odb_x32 cleanup)
 target_include_directories(lava-odb_x32 BEFORE
     PUBLIC
     ${GENERATED}
@@ -38,6 +39,7 @@ target_include_directories(lava-odb_x32 BEFORE
 add_library(lava-odb_x64 STATIC ${GENERATED}/lava-odb.cxx)
 set_property(TARGET lava-odb_x64 PROPERTY CXX_STANDARD 11)
 target_link_libraries(lava-odb_x64 odb odb-pgsql)
+add_dependencies(lava-odb_x64 cleanup)
 target_include_directories(lava-odb_x64 BEFORE
     PUBLIC
     ${GENERATED}
