--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -63,5 +63,5 @@ RUN updatedb
 
 ENV CC=/$llvm_version/install/bin/clang
 ENV CXX=/$llvm_version/install/bin/clang++
-ENV LLVM_DIR=/$llvm_version/install/share/llvm/cmake
+RUN echo "LLVM_DIR=/$llvm_version/install/share/llvm/cmake" >> /etc/environment
 
