--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -63,6 +63,7 @@ RUN updatedb
 
 RUN echo "LLVM_DIR=/$llvm_version/Release/share/llvm/cmake" >> /etc/environment
 RUN echo "LD_LIBRARY_PATH=/$llvm_version/Release/lib" >> /etc/environment
+RUN echo "LIBRARY_PATH=/usr/local/lib" >> /etc/environment
 RUN echo "PATH=$PATH:/$llvm_version/Release/bin" >> /etc/environment
 
 RUN apt-get install -y sudo gdb gawk
